# goTabGo

./: .editorconfig  .gitignore  BUILD  README.md  WORKSPACE  client.go  deps.bzl  error.go  go.mod  go.sum  http.go  httpclient.go  model.go  tabapi.go  types.go
.github/workflows/: workflows.yaml
cmd/: BUILD.bazel  main.go
gotabgo/: BUILD.bazel  main.go
gotabgo/cmd/: BUILD.bazel  root.go  serverinfo.go
model/: BUILD.bazel  trustedticket.go  tsreponse.go  tsrequest.go
