load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/groundfoundation/gotabgo/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//:gotabgo",
        "@org_golang_x_term//:term",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
