load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "root.go",
        "serverinfo.go",
    ],
    importpath = "github.com/groundfoundation/gotabgo/gotabgo/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//:gotabgo",
        "@com_github_mitchellh_go_homedir//:go-homedir",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
    ],
)
